tag choose after break up

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -951,21 +951,36 @@ EVTDESC8162;The Northwest revolted! \n\nThe Praieiros took over the province and
 EVTOPTA8162;Filthy rebels!;;;;;;;;;;;;;x
 EVTOPTB8162;Damn the central government!;;;;;;;;;;;;;x
 EVTNAME8163;The Praieiros Rebellion!;;;;;;;;;;;;;x
-EVTDESC8163;The Northwest revolted has revolted and is currently out of our control. \n\nThe Praieiros Party took over and called up other rebellions provinces, a true civil war has begun. \n\nWe should now decided if the fight is worth the risk, the government is already in extremely bad shape and the war effort may make us even more unstable, on the other hand, just accepting the rebellion stir even more rebellions or shake the very core of teh brazilian state foundation.;;;;;;;;;;;;;x
+EVTDESC8163;The Northwest revolted and is currently out of our control. \n\nThe Praieiros Party took over and called up other rebellious provinces, a true civil war has begun. \n\nWe should now decided if the fight is worth the risk, the government is already in extremely bad shape and the war effort may make us even more unstable, on the other hand, just accepting the rebellion could stir even more rebellions and cause a spiral downwards.;;;;;;;;;;;;;x
 EVTOPTA8163;We will retake what is ours!;;;;;;;;;;;;;x
 EVTOPTB8163;It's over. We can't afford to go into an war like this.!;;;;;;;;;;;;;x
 EVTNAME8166;The Brazilian Army Prevails!;;;;;;;;;;;;;x
 EVTDESC8166;The Brazilian Army managed to pacify the provinces up north and put an end to the civil war. \n\n While it is a glorious day in our history, it was a massive undertaking and it will be years before a full recovery. The country is in a terrible state, and we need to get everything together before our enemies prey upon our current weak state.;;;;;;;;;;;;;x
 EVTOPTA8166;Pride and Glory!;;;;;;;;;;;;;x
-EVTOPTB8166;Honor the dead!;;;;;;;;;;;;;x
-EVTNAME8167;The Praieiros broke free.;;;;;;;;;;;;;x
-EVTDESC8167;The Brazilian Army failed to pacify the provinces up north. \n\n We lost the civil war. \n\n Besides all the money and efforts poured into it, the was is lost. The Praieiros managed to stablish themselves and the nordeste region is now out of our control.;;;;;;;;;;;;;x
+EVTOPTB8166;Honor the dead.;;;;;;;;;;;;;x
+EVTNAME8167;The civil war was lost.;;;;;;;;;;;;;x
+EVTDESC8167;The Brazilian Army failed to pacify the provinces up north. \n\n We lost the civil war. \n\n Besides all the money and blood poured into it, the war was lost. The Praieiros managed to stablish themselves and the nordeste region is now out of our control.;;;;;;;;;;;;;x
 EVTOPTA8167;This is truly a terrible blow to the nation as a whole.;;;;;;;;;;;;;x
-EVTNAME8170;The end of $COUNTRY$.;;;;;;;;;;;;;x
-EVTDESC8170;The country is in shambles.\n\nRevolt after revolt, bad decision after bad decision, the Brasilian state got weaker and weaker, the people are restless and distrustful of the government.\n\nThe dreams of a brasilian great power are slowly fading away, maybe it was never meant to be, maybe we should follow the steps of our colonial cousins in the rest of south america and leave behind the idea of a united Brasilian state.;;;;;;;;;;;;;x
+EVTNAME8170;The end of Brazil.;;;;;;;;;;;;;x
+EVTDESC8170;The country is in shambles.\n\nRevolt after revolt, bad decision after bad decision, the brasilian state got weaker and weaker, the people are restless and distrustful of the government.\n\nThe dreams of a brasilian great power are slowly fading away, maybe it was never meant to be, maybe we should follow the steps of our colonial cousins in the rest of south america and leave behind the idea of a united brasilian state.;;;;;;;;;;;;;x
 EVTOPTA8170;We are brasilians, we will stay as brasilians!;;;;;;;;;;;;;x
 EVTOPTB8170;Reorganize the government around our central cores, we can still salvage this country.;;;;;;;;;;;;;x
 EVTOPTC8170;So be it. Brazil will be no more.;;;;;;;;;;;;;x
+EVTNAME8171;The end of Brazil.;;;;;;;;;;;;;x
+EVTDESC8171;The dream of a united brasilian state is no more. The government failed to secure the country's goals, safe keep it's borders and, the most important, maintain the national identity together.\n\nThe dream of a great power brasilian state is now gone, it's over.;;;;;;;;;;;;;x
+EVTOPTA8171;Maybe we will arise again one day...;;;;;;;;;;;;;x
+EVTNAME8172;Lunch time!;;;;;;;;;;;;;x
+EVTDESC8172;Nothing better than some nice warm food aftera country breaking revolution!;;;;;;;;;;;;;x
+EVTOPTA8172;Feijoada!;;;;;;;;;;;;;x
+EVTOPTB8172;Virado á Paulista!;;;;;;;;;;;;;x
+EVTOPTC8172;Pão de queijo!;;;;;;;;;;;;;x
+EVTOPTD8172;Churrasco!;;;;;;;;;;;;;x
+EVTOPTE8172;Acarajé!;;;;;;;;;;;;;x
+EVTOPTF8172;Buchada!;;;;;;;;;;;;;x
+EVTOPTG8172;Moqueca de Peixe!;;;;;;;;;;;;;x
+EVTOPTH8172;Galinhada!;;;;;;;;;;;;;x
+EVTOPTI8172;Pato no Tucupi!;;;;;;;;;;;;;x
+EVTOPTX8172;Something else...;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
