--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -970,7 +970,7 @@ EVTNAME8171;The end of Brazil.;;;;;;;;;;;;;x
 EVTDESC8171;The dream of a united brasilian state is no more. The government failed to secure the country's goals, safe keep it's borders and, the most important, maintain the national identity together.\n\nThe dream of a great power brasilian state is now gone, it's over.;;;;;;;;;;;;;x
 EVTOPTA8171;Maybe we will arise again one day...;;;;;;;;;;;;;x
 EVTNAME8172;Lunch time!;;;;;;;;;;;;;x
-EVTDESC8172;Nothing better than some nice warm food aftera country breaking revolution!;;;;;;;;;;;;;x
+EVTDESC8172;\n\n\n\nNothing better than some nice warm food aftera country breaking revolution!;;;;;;;;;;;;;x
 EVTOPTA8172;Feijoada!;;;;;;;;;;;;;x
 EVTOPTB8172;Virado á Paulista!;;;;;;;;;;;;;x
 EVTOPTC8172;Pão de queijo!;;;;;;;;;;;;;x
