Colonial reconquest for The Netherlands

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1513,6 +1513,24 @@ EVTOPTA993522;Good riddance.;;;;;;;;;;;;;x
 EVTNAME993532;Willem of Oranje-Nassau in exile;;;;;;;;;;;;;x
 EVTDESC993532;After abdicating the Dutch throne, the former King of the Netherlands has requested assylum in Berlin. Considering the good relations between our royal houses, the King has naturally allowed him to do so.;;;;;;;;;;;;;x
 EVTOPTA993532;As long as he does no harm;;;;;;;;;;;;;x
+EVTNAME993533;The Dutch Cape Colony;;;;;;;;;;;;;x
+EVTDESC993533;The Cape Colony was a Dutch United East India Company Colony in Southern Africa. Jan van Riebeeck established the colony as a re-supply and layover port for vessels of the VOC trading with Asia. In 1795, after the Battle of Muizenberg in present-day Cape Town, the British occupied the colony. Under the terms of the Peace of Amiens of 1802, Britain acceded the colony to the Dutch on 1 March 1803. However, as the outbreak of the Napoleonic Wars invalidated the Peace of Amiens. In January 1806, the British occupied the colony for a second time after the Battle of Blaauwberg. The Anglo-Dutch Treaty of 1814 confirmed the transfer of sovereignty to Great Britain. However, most of the dutch settlers - The Boers - were under heavy opression by the British rulership, forced to leave North to the rivers Vaal and Orange and establish there their own Republics.;;;;;;;;;;;;;x
+EVTOPTA993533;We are but one soul separated by the sea.;;;;;;;;;;;;;x
+EVTOPTB993533;We will not shed Dutch blood over a few acres of desert.;;;;;;;;;;;;;x
+EVTNAME993534;$FROMCOUNTRY$ Demands Cape Colony;;;;;;;;;;;;;x
+EVTDESC993534;The Dutch government demanded Cape Colony that belongs to us being sold to them!;;;;;;;;;;;;;x
+EVTOPTA993534;We will not bow to Dutch demands!;;;;;;;;;;;;;x
+EVTOPTB993534;The Boers are more trouble than they're worth.;;;;;;;;;;;;;x
+EVTNAME993535;$FROMCOUNTRY$ has ignored our demands!;;;;;;;;;;;;;x
+EVTDESC993535;The United Kingdom has denied our generous offer, making the peaceful acquisition of Cape Colony all but impossible, we could declare war on the British right now, or we could abandon the dream of reuniting the Boers and avoid a costly war.;;;;;;;;;;;;;x
+EVTOPTA993535;War is our only option for reclaiming Cape Colony!;;;;;;;;;;;;;x
+EVTOPTB993535;Reuniting the Boers was a noble dream, but it is not worth it.;;;;;;;;;;;;;x
+EVTNAME993536;$FROMCOUNTRY$ has agreed!;;;;;;;;;;;;;x
+EVTDESC993536;The United Kingdom has agreed with our generous offer.;;;;;;;;;;;;;x
+EVTOPTA993536;We are united once more.;;;;;;;;;;;;;x
+EVTNAME993537;Cape Colony is reconquered by Dutch!;;;;;;;;;;;;;x
+EVTDESC993537;Our brethren released us from the British oppression;;;;;;;;;;;;;x
+EVTOPTA993537;We welcome their return!;;;;;;;;;;;;;x
 EVTNAME993523;Willem I died in exile;;;;;;;;;;;;;x
 EVTDESC993523;News from Prussia has reached us this morning, announcing that our former King William I has died. His son has requested a national event to mourn the former ruler.;;;;;;;;;;;;;x
 EVTOPTA993523;Despite his flaws, the nation shall mourn;;;;;;;;;;;;;x
