--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -189,6 +189,14 @@ french_conquest_of_louisiana_usa;Defend Louisiana;;;;;;;;;;;;;x
 french_conquest_of_louisiana_usa_desc;Louisiana is rightfully ours and we must defend ourselves from French aggression.;;;;;;;;;;;;;x
 french_conquest_of_louisiana_usa_setup;Defend Louisiana;;;;;;;;;;;;;x
 french_conquest_of_louisiana_usa_short;Defend Louisiana;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_net;Liberate Cape Colony;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_net_desc;We must free our brethren living under British oppression!;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_net_setup;Liberate Cape Colony;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_net_short;Liberate Cape Colony;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_uk;Crush Dutch Colonial Ambitions;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_uk_desc;Keep Dutch colonial dreams as nothing more than that.;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_uk_setup;Obtain control of Dutch colonies;;;;;;;;;;;;;x
+dutch_conquest_of_south_africa_uk_short;Obtain control of Dutch colonies;;;;;;;;;;;;;x
 golden_circle_dismantling;Destroy the CSA;;;;;;;;;;;;;x
 golden_circle_dismantling_desc;Stop the savage Knights of the Golden Circle;;;;;;;;;;;;;x
 golden_circle_dismantling_setup;Destroy the CSA;;;;;;;;;;;;;x
