--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -217,6 +217,7 @@ NORMAL_CIVIL_WAR_NAME_USA_CSA_USA;$ORDER$War of the Rebellion;$ORDER$ guerre de 
 NORMAL_CIVIL_WAR_NAME_USA_FSA;The $ORDER$American Civil War;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
 NORMAL_CONQUEST_OF_CANADA;French Liberation of Québec;;;;;;;;;;;;;x
 NORMAL_CONQUEST_OF_LOUISIANA;The Conquest of Louisiane;;;;;;;;;;;;;x
+NORMAL_CONQUEST_OF_SAF;Dutch Liberation of Cape Colony;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME;The$ORDER$Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME_RUS_TUR;The Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME;$ORDER$$FIRST$–$SECOND$ War;Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$er Krieg;;;;;;;;;;;x
@@ -236,6 +237,7 @@ NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_PER;The $ORDER$Anglo–Persian War;;;;;;;;
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_QNG;The $ORDER$Opium War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_TPG;$ORDER$Opium War;;;;;;;;;;;;;x
 NORMAL_STOP_FRENCH_COLONIAL_AMBITIONS;War of French Containment;;;;;;;;;;;;;x
+NORMAL_STOP_DUTCH_COLONIAL_AMBITIONS;War of Dutch Containment;;;;;;;;;;;;;x
 NORMAL_SUBSTATE_STATE_NAME;$ORDER$$FIRST$ Conquest of $COUNTRY_ADJ$ $STATE$;$ORDER$$FIRST$ conquête de $STATE$;$ORDER$$FIRST$e Eroberung von $STATE$;;;;;;;;;;;x
 NORMAL_SYKES_PICOT_WAR_NAME;The$ORDER$Asia Minor Expedition;;;;;;;;;;;;;x
 NORMAL_SYKES_PICOT_WAR_NAME_ENG_TUR;The Asia Minor Expedition;;;;;;;;;;;;;x
