Boer flavor and fixes

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -313,6 +313,8 @@ annex_puerto_rico_desc;Puerto Rico belongs with the Confederacy. Our diplomatic 
 annex_puerto_rico_title;Annex Puerto Rico;;;;;;;;;;;;;x
 annex_rhineland_desc;German attempts to reclaim the Rhineland have failed, the time has come to dissolve the puppet state of the Rhine and begin integrating the Rhineland into $COUNTRY$, Vive la France!;;;;;;;;;;;;;x
 annex_rhineland_title;Annex the Rhine!;;;;;;;;;;;;;x
+annex_SAF_minors_title;Centralize our Administration;;;;;;;;;;;;;x
+annex_SAF_minors_desc;We have gained loyal vassals in our conquests of South Africa, however, the time has come to bring them into our direct rule.;;;;;;;;;;;;;x
 annex_sigmaringen_desc;The principalities of Hohenzollern-Sigmaringen and Hohenzollern-Hechingen, both independent principalities ruled by the Catholic princely lines of the House of Hohenzollern, are inherently tied to our country. The tumultuous atmosphere of the liberal revolutions left the catholic princes willing to negotiate and now they are both in a position to hand over their sovereignty to us.;;;;;;;;;;;;;x
 annex_sigmaringen_title;Create the Province of Hohenzollern;;;;;;;;;;;;;x
 annex_texas_desc;With our complete control over Texas, let us now annex it into the United States, as it was meant to be!;;;;;;;;;;;;;x
@@ -712,6 +714,8 @@ claim_negusa_nagast_desc;The Solomonic dynasty is a puppet in Gonder and Ethiopi
 claim_negusa_nagast_title;Claim the Imperial Throne;;;;;;;;;;;;;x
 claim_nejd_desc;We cannot unite all of Arabia under our banner unless we control the central provinces. The House of Rashid must stand dominant!;;;;;;;;;;;;;x
 claim_nejd_title;Claim Nejd;;;;;;;;;;;;;x
+claim_northern_cape_title;Claim Northern Cape;;;;;;;;;;;;;x
+claim_northern_cape_desc;The Northern Cape is Boer territory and rightfully belongs as part of our nation.;;;;;;;;;;;;;x
 claim_north_cape_colony_desc;The northern cape colony rightfully belongs to us. We must take steps to assert our claim, before our African ambitions come to naught.;;;;;;;;;;;;;x
 claim_north_cape_colony_title;Claim the Northern Cape;;;;;;;;;;;;;x
 claim_north_caucasus_desc;By rights, the northern Caucasus region belongs as part of our country just as do its people.;;;;;;;;;;;;;x
@@ -2932,6 +2936,8 @@ treaty_of_vienna_desc;The Unification of Greater Germany is at hand, the Austria
 treaty_of_vienna_title;The Treaty of Vienna ($YEAR$);;;;;;;;;;;;;x
 tsushima_treaty_port_desc;Tsushima island, laying about 50 kilometres of the coast of Korea, is a Japanese island mostly covered by vegetation and sparsely populated. Despite its small size and lack of natural resources, the island is strategically located in the Korean strait and would be an excellent spot for year-round anchorage.;;;;;;;;;;;;;x
 tsushima_treaty_port_title;The Tsushima Treaty Port;;;;;;;;;;;;;x
+tugela_river_convention_desc;The Boers of the Natal are becoming increasingly resistant to colonial rule. The time has come to meet with them at Pietermaritzburg and discuss the terms of their independence—preferably subject to our conditions, which are that they abandon all laws allowing slavery and that our influence within their borders remain strong.;;;;;;;;;;;;;x
+tugela_river_convention_title;Tugela River Convention;La convention d'Tugela River;Tugela River Convention;;;;;;;;;;;x
 tunisian_colony_desc;Tunisia has been in a bad situation over the last years, on the border of bankruptcy. Their overlords hold on them grows weak and our control over them grows stronger each passing day. It’s time to intervene in their local politics, guarantee that they pay their debts and that they run their country like it should be ran—an efficient colony that we can use.;;;;;;;;;;;;;x
 tunisian_colony_title;The $COUNTRY_ADJ$ Protectorate Over Tunisia;;;;;;;;;;;;;x
 turkish_tea_desc;Turkish tea, called çay, is an important part of Turkish culture. Offering tea to guests is part of Turkish hospitality though tea is most often consumed in households, shops and mostly kiraathane, which is social congregation of Turkish men. Turkish tea is typically prepared using two stacked kettles called ‘çaydanlik’ specially designed for tea preparation. Water is brought to a boil in the larger lower kettle and then some of the water is used to fill the smaller kettle on top and steep (infuse) several spoons of loose tea leaves, producing a very strong tea. Despite the growing popularity of tea in $COUNTRY$, there are no tea producing provinces in our homeland. Now the microclimate region along the eastern coast of the Black Sea was identified by specialists as an ideal spot to start tea production, which will contribute to the task of fulfilling the growing demand for tea by the $COUNTRY_ADJ$ citizens. However, this knowledge is kept largely a secret by the British and they are bound to be dissatisfied if we start our own tea production.;;;;;;;;;;;;;x
@@ -2978,6 +2984,8 @@ unite_with_nepal_desc;The time has come to re-join with Greater Nepal and reform
 unite_with_nepal_title;Unite with Nepal;;;;;;;;;;;;;x
 unite_with_poland_desc;Now that Poland has been reborn, the time has come for Krakow to re-join the motherland.;;;;;;;;;;;;;x
 unite_with_poland_title;Unite with Poland;;;;;;;;;;;;;x
+unite_with_potchefstroom_desc;Our fellow Boers have managed to create their own nation free from the natives in the savanna north of the Vaal River, we should come together with our brethren to form a stronger union.;;;;;;;;;;;;;x
+unite_with_potchefstroom_title;Unite With Potchefstroom;;;;;;;;;;;;;x
 unite_with_romania_desc;Now that Romania has been formed, the time has come for us to join the motherland.;;;;;;;;;;;;;x
 unite_with_romania_title;Unite with Romania;;;;;;;;;;;;;x
 unite_with_transvaal_desc;Our fellow Boers have managed to create their own independent nation free from both the British and the natives in the savanna north of the Vaal River, we should come together with our brethren to form a stronger union.;;;;;;;;;;;;;x
@@ -3032,6 +3040,8 @@ wakhan_treaty_desc;Fears of an invasion of British India by the Russians is at a
 wakhan_treaty_title;The Wakhan Treaty;;;;;;;;;;;;;x
 walloon_autonomy_desc;Our recent annexation of Wallonia has not gone as smoothly as planned. Small cultural differences are present, and the Walloon-ran local government resists our attempts to centralize power. If we were to grant Wallonia a degree of autonomy (which may be revoked later), we will be able to quell any unrest and work towards fully adding Wallonia into the French Nation.;;;;;;;;;;;;;x
 walloon_autonomy_title;Grant Wallonia Autonomy;;;;;;;;;;;;;x
+warden_line_desc;Captain Henry Douglas Warden, British Resident among the tribes living beyond the Frontier to the North-East, has proposed proclaiming sovereignty over the region of Transorangia, or the land North of the Orange river. The Orange River Sovereignty would allow us to create a new northward buffer towards the Boers and the Sotho, give us new opportunities to exploit possible resources and allow us to expand further.;;;;;;;;;;;;;x
+warden_line_title;The Warden Line;;;;;;;;;;;;;x
 war_italian_independence_desc;It falls upon our nation to break the power that Austria has over Italy. Lombardia must be freed, at any cost.;;;;;;;;;;;;;x
 war_italian_independence_title;War of Italian Independence;;;;;;;;;;;;;x
 we_are_italian_desc;Now that we are free, it is time to reassert our Italian heritage. We must re-join the motherland!;;;;;;;;;;;;;x
