--- a/TGC/localisation/00_events_0040000.csv
+++ b/TGC/localisation/00_events_0040000.csv
@@ -259,6 +259,7 @@ EVTOPTC44333;Onwards to New Zealand!;;;;;;;;;;;;x
 EVTNAME44334;The South African Dominion;;;;;;;;;;;;x
 EVTDESC44334;The colony of $COUNTRY_ADJ$ South Africa has asked to be governed as an autonomous dominion within the empire.;;;;;;;;;;;;x
 EVTOPTC44334;Onwards to South Africa!;;;;;;;;;;;;x
+EVTOPTD44334;No, and don't ask me again.;;;;;;;;;;;;x
 EVTNAME44335;$COUNTRY_ADJ$ Territories;;;;;;;;;;;;x
 EVTDESC44335;Our overlords are in control of territory that rightfully belongs to $COUNTRY$. Perhaps we should request to have it returned?;;;;;;;;;;;;x
 EVTOPTA44335;Make the request.;;;;;;;;;;;;x
