More and More Migration Adjustments

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -314,6 +314,7 @@ dar_al_funun;The Dar al-Funun.;Le Dar al Funun.;Der Dar al Funun.;;;;;;;;;;;x
 dar_al_funun_desc;The first modern university in Persia.;;;;;;;;;;;;;x
 debt_default_to;Debt Default To;;;;;;;;;;;;;x
 declared_republic;We have declared a new Republic in Nicaragua modeled after the United States.;;;;;;;;;;;;;x
+depleted_mine;Depleted Mine;;;;;;;;;;;;;x
 destitution_and_poverty;Destitution & Poverty;;;;;;;;;;;;;x
 destitution_and_poverty_desc;The consumption of alcohol is fast becoming a major social problem in this province;;;;;;;;;;;;;x
 detroit_growth;Detroit Growing;;;;;;;;;;;;;x
