--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -4019,3 +4019,4 @@ PROV4017;Usukhchai;;;;;;;;;;;;;x
 PROV4018;Veluwe;;;;;;;;;;;;;x
 PROV4019;Achterhoek;;;;;;;;;;;;;x
 PROV4020;Poluostrov Alyaska;;;;;;;;;;;;;x
+PROV4021;Redut Delarovsky;;;;;;;;;;;;;x
