--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -995,6 +995,10 @@ EVTOPTA332551;Truly a great loss.;;;;;;;;;;;;;x
 EVTDESC332552;Taras Shevchenko has died due to his ill health. Although he barely spent any time in his native Ukraine, he will always be remembered as the father of the modern Ukrainian nation, language, and culture. His will requested that he be buried in his native Ukraine, and efforts are underway to give him a proper burial and wake.;;;;;;;;;;;;;x
 EVTNAME332552;Taras Shevchenko Dies;;;;;;;;;;;;;x
 EVTOPTA332552;Truly a great loss.;;;;;;;;;;;;;x
+EVTDESC347000;Many languages are spoken across the Italian Peninsula: since the fall of the Roman Empire and the loss of a strong central authority every region, or even every city, has developed its own dialect, drifting apart from the common Latin ancestor. This, added to the differences in the local linguistic substrata already present and due to the successive arrival of various superstrata, has lead to the current situation: an unified spoken language, comprehensible from the Alps to Sicily, doesn't exist and Italian is merely a constructed litereary language based on the works of the great tuscan authors of the past. Luckily for us a new version of Italian, way closer to current spoken Tuscan, has been emerging since the spread of "The Betrothed", a book by Alessandro Manzoni, and we could adopt that as the language of the Italy.;;;;;;;;;;;;;x
+EVTNAME347000;La Questione della Lingua;;;;;;;;;;;;;x
+EVTOPTA347000;Una nazione, un popolo!;;;;;;;;;;;;;x
+EVTOPTB347000;Minime! Sermo Latinus solum recipitur.;;;;;;;;;;;;;x
 EVTOPTA369706;Give them more than they estimated.;;;;;;;;;;;;;x
 EVTOPTB369706;Give them the amount estimated.;;;;;;;;;;;;;x
 EVTOPTC369706;Give them less than they estimated.;;;;;;;;;;;;;x
