Migration Migration Migration

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -547,6 +547,7 @@ gold_rush;Gold Rush;;;;;;;;;;;;;x
 gold_rush_country;Gold Rush;;;;;;;;;;;;;x
 gold_rush_country_desc;Our country is experiencing a gold rush leading people from all over the old world to flock to our country.;;;;;;;;;;;;;x
 gold_rush_desc;This province is booming due to the discovery of gold;;;;;;;;;;;;;x
+gold_rush_small;Gold Rush;;;;;;;;;;;;;x
 good_health_care_fully_funded;Fully Funded Healthcare;;;;;;;;;;;;;x
 government_propaganda;Government Propaganda;;;;;;;;;;;;;x
 government_propaganda_desc;Our country is currently undertaking a massive propaganda campaign, pushing the people to support our government policies.;;;;;;;;;;;;;x
