--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -82,6 +82,7 @@ anti_jacobin_tract_desc;A tract arguing the causes of counter-revolution, order,
 anti_manchu_sentiment;Anti-Manchu Sentiment;;;;;;;;;;;;;x
 anti_manchu_sentiment_desc;There is a great deal of bitterness against the Qing Dynasty’s rulers in this province.;;;;;;;;;;;;;x
 apache_raiders;Apache Raiders;;;;;;;;;;;;;x
+argentinian_bread_basket;South American Breadbasket;;;;;;;;;;;;;x
 armenian_diaspora;Armenian Diaspora;;;;;;;;;;;;;x
 armenian_diaspora_desc;This province contains a minority population that comes from the Armenian diaspora.;;;;;;;;;;;;;x
 assegai;Impi;;;;;;;;;;;;;x
