De Appellandi Modo

--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -997,8 +997,13 @@ EVTNAME332552;Taras Shevchenko Dies;;;;;;;;;;;;;x
 EVTOPTA332552;Truly a great loss.;;;;;;;;;;;;;x
 EVTDESC347000;Many languages are spoken across the Italian Peninsula: since the fall of the Roman Empire and the loss of a strong central authority every region, or even every city, has developed its own dialect, drifting apart from the common Latin ancestor. This, added to the differences in the local linguistic substrata already present and due to the successive arrival of various superstrata, has lead to the current situation: an unified spoken language, comprehensible from the Alps to Sicily, doesn't exist and Italian is merely a constructed litereary language based on the works of the great tuscan authors of the past. Luckily for us a new version of Italian, way closer to current spoken Tuscan, has been emerging since the spread of "The Betrothed", a book by Alessandro Manzoni, and we could adopt that as the language of the Italy.;;;;;;;;;;;;;x
 EVTNAME347000;La Questione della Lingua;;;;;;;;;;;;;x
-EVTOPTA347000;Una nazione, un popolo!;;;;;;;;;;;;;x
+EVTOPTA347000;Una nazione, un popolo, una lingua!;;;;;;;;;;;;;x
 EVTOPTB347000;Minime! Sermo Latinus solum recipitur.;;;;;;;;;;;;;x
+EVTDESC347001;Linguarum appellandi modus in saecolis mutat et sermo Latinus non excipit. Ecclesiae institutum suam litterarum appellationem excoluit, similissimam Italiaco modo, quae dissimilis eo veterum Romanorum est. Hoc uti volumus donec quidam litterarii antiquam loqui rationem restituerunt et nobis fungi proposuerunt. Nunc quaestio: pergere loqui Latine modo Ecclesiae aut sequi hanc "novam" litterarum appellationem debemus?
+EVTNAME347001;De Appellandi Modo;;;;;;;;;;;;;x
+EVTOPTA347001;Appellandi modo ecclesiastico loquamur.;;;;;;;;;;;;;x
+EVTOPTB347001;What? I can't understand anything!;;;;;;;;;;;;;x
+EVTOPTC347001;Appellandi modo restituto loquamur.;;;;;;;;;;;;;x
 EVTOPTA369706;Give them more than they estimated.;;;;;;;;;;;;;x
 EVTOPTB369706;Give them the amount estimated.;;;;;;;;;;;;;x
 EVTOPTC369706;Give them less than they estimated.;;;;;;;;;;;;;x
