--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -999,11 +999,15 @@ EVTDESC347000;Many languages are spoken across the Italian Peninsula: since the 
 EVTNAME347000;La Questione della Lingua;;;;;;;;;;;;;x
 EVTOPTA347000;Una nazione, un popolo, una lingua!;;;;;;;;;;;;;x
 EVTOPTB347000;Minime! Sermo Latinus solum recipitur.;;;;;;;;;;;;;x
-EVTDESC347001;Linguarum appellandi modus in saecolis mutat et sermo Latinus non excipit. Ecclesiae institutum suam litterarum appellationem excoluit, similissimam Italiaco modo, quae dissimilis eo veterum Romanorum est. Hoc uti volumus donec quidam litterarii antiquam loqui rationem restituerunt et nobis fungi proposuerunt. Nunc quaestio: pergere loqui Latine modo Ecclesiae aut sequi hanc "novam" litterarum appellationem debemus?
+EVTDESC347001;Linguarum appellandi modus in saecolis mutat et sermo Latinus non excipit. Ecclesiae institutum suam litterarum appellationem excoluit, similissimam Italiaco modo, quae dissimilis eo veterum Romanorum est. Hoc uti volumus donec quidam litterarii antiquam loqui rationem restituerunt et nobis fungi proposuerunt. Nunc quaestio: pergere loqui Latine modo Ecclesiae aut sequi hanc "novam" litterarum appellationem debemus?;;;;;;;;;;;;;x
 EVTNAME347001;De Appellandi Modo;;;;;;;;;;;;;x
 EVTOPTA347001;Appellandi modo ecclesiastico loquamur.;;;;;;;;;;;;;x
 EVTOPTB347001;What? I can't understand anything!;;;;;;;;;;;;;x
 EVTOPTC347001;Appellandi modo restituto loquamur.;;;;;;;;;;;;;x
+EVTDESC347002;Haud omnes magni existamabant ut nos Latinam linguam in vita restituisse, aestimantes nos solum iactantiam secutos esse. Praeclarum est eos stultos esse. Deinde acerbius in istos invehi "novos" coepimus, sed ii non modo iniuria suis inferri non putant, verum etiam honoris and gloriae causam talem nomimem ducunt, quod in "novitas" virtus sit. Ultimam rem gerere debemus, antequam ipsi nos ab imperio labefactaverint.;;;;;;;;;;;;;x
+EVTNAME347002;Novis Obstantis;;;;;;;;;;;;;x
+EVTOPTA347002;…;;;;;;;;;;;;;x
+EVTOPTB347002;Cruentissima caedes erit!;;;;;;;;;;;;;x
 EVTOPTA369706;Give them more than they estimated.;;;;;;;;;;;;;x
 EVTOPTB369706;Give them the amount estimated.;;;;;;;;;;;;;x
 EVTOPTC369706;Give them less than they estimated.;;;;;;;;;;;;;x
