--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -1006,8 +1006,11 @@ EVTOPTB347001;What? I can't understand anything!;;;;;;;;;;;;;x
 EVTOPTC347001;Appellandi modo restituto loquamur.;;;;;;;;;;;;;x
 EVTDESC347002;Haud omnes magni existamabant ut nos Latinam linguam in vita restituisse, aestimantes nos solum iactantiam secutos esse. Praeclarum est eos stultos esse. Deinde acerbius in istos invehi "novos" coepimus, sed ii non modo iniuria suis inferri non putant, verum etiam honoris and gloriae causam talem nomimem ducunt, quod in "novitas" virtus sit. Ultimam rem gerere debemus, antequam ipsi nos ab imperio labefactaverint.;;;;;;;;;;;;;x
 EVTNAME347002;Novis Obstantis;;;;;;;;;;;;;x
-EVTOPTA347002;…;;;;;;;;;;;;;x
+EVTOPTA347002;Ab eo non sollicitor;;;;;;;;;;;;;x
 EVTOPTB347002;Cruentissima caedes erit!;;;;;;;;;;;;;x
+EVTDESC347003;Hodie dies quietus fuit et nihil melius est quam somnus longus beatusque. Sic cogitabant plurima gloriosae civitatis duces, nescientes de pericolo incombente. Dum dormiunt, quaedam nefaria factio novorum inebat in regiam domum, desideratura omnes occidere. Cruentissima caedes coeperunt et… et…\n …and no one, of the supporters of Latin reinstatement, was left alive. The Novi have triumphed.;;;;;;;;;;;;;x
+EVTNAME347003;Novorum Cospiratio;;;;;;;;;;;;;x
+EVTOPTA347003;Viva l'Italia! Viva l'Italiano!;;;;;;;;;;;;;x
 EVTOPTA369706;Give them more than they estimated.;;;;;;;;;;;;;x
 EVTOPTB369706;Give them the amount estimated.;;;;;;;;;;;;;x
 EVTOPTC369706;Give them less than they estimated.;;;;;;;;;;;;;x
