--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -989,3 +989,13 @@ EVTNAME8401;The Birth of the Brazilian Academy of Letters;;;;;;;;;;;;;x
 EVTDESC8401;In an effort to foster the continued evolution of Brazilian literature and arts, a group of esteemed writers, including luminaries like Machado de Assis, Lúcio de Mendonça, Inglês de Sousa, and many others, have come together to establish the Brazilian Academy of Letters. This ambitious endeavor aims to provide a platform for intellectual exchange, recognition, and preservation of our nation's literary heritage.;;;;;;;;;;;;;x
 EVTOPTA8401;I wish them good luck!;;;;;;;;;;;;;x
 EVTOPTB8401;We should support them!;;;;;;;;;;;;;x
+EVTNAME8403;O Navio Negreiro;;;;;;;;;;;;;x
+EVTDESC8403;Antonio de Castro Alves published O Navio Negreiro, an abolitionist poem denouncing the woes of slavery. The poem starts serene, calm, beautiful, but the most attentive reader will see how it falls into anguish and distress. Through his eloquent verses, Castro Alves masterfully exposes the brutality, suffering, and dehumanization endured by enslaved individuals during their harrowing journey across the Atlantic Ocean. The transformation of the poem from tranquility to torment serves as a stark reminder of the painful reality faced by those enslaved, leaving a lasting impact on readers and further fueling the abolitionist cause.\n\n\n He’s quickly gaining the title of The Poet of the Slaves, and stirring up discussion about the matter.;;;;;;;;;;;;;x
+EVTOPTA8403;"Albatroz! Albatroz!";;;;;;;;;;;;;x
+EVTOPTB8403;Don't you mean the SUPPOSEDLY woes of slavery?;;;;;;;;;;;;;x
+EVTDESC8404;Antonio de Castro Alves published O Navio Negreiro, a poem about the woes of slavery. It starts serene, calm, beautiful, but the most attentive reader will see how it falls into anguish and distress. Through his eloquent verses, Castro Alves masterfully exposes the brutality, suffering, and dehumanization once endured by enslaved individuals during their harrowing journey across the Atlantic Ocean. The transformation of the poem from tranquility to torment serves as a stark reminder of the painful past faced by those enslaved, leaving a lasting impact on readers and further fueling the abolitionist cause.\n\n\n Castro Alves is quickly earning the title of "The Poet of the Slaves," igniting discussions about the historical injustice and its lingering impact on society..;;;;;;;;;;;;;x
+EVTOPTA8404;"Albatroz! Albatroz!";;;;;;;;;;;;;x
+EVTOPTB8404;HA, the good old times.;;;;;;;;;;;;;x
+
+
+
