--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -996,6 +996,9 @@ EVTOPTB8403;Don't you mean the SUPPOSEDLY woes of slavery?;;;;;;;;;;;;;x
 EVTDESC8404;Antonio de Castro Alves published O Navio Negreiro, a poem about the woes of slavery. It starts serene, calm, beautiful, but the most attentive reader will see how it falls into anguish and distress. Through his eloquent verses, Castro Alves masterfully exposes the brutality, suffering, and dehumanization once endured by enslaved individuals during their harrowing journey across the Atlantic Ocean. The transformation of the poem from tranquility to torment serves as a stark reminder of the painful past faced by those enslaved, leaving a lasting impact on readers and further fueling the abolitionist cause.\n\n\n Castro Alves is quickly earning the title of "The Poet of the Slaves," igniting discussions about the historical injustice and its lingering impact on society..;;;;;;;;;;;;;x
 EVTOPTA8404;"Albatroz! Albatroz!";;;;;;;;;;;;;x
 EVTOPTB8404;HA, the good old times.;;;;;;;;;;;;;x
+EVTNAME8405;The Beautiful Game;;;;;;;;;;;;;x
+EVTDESC8405;The Paulista Charles Miller came back from England, where he had studied, with two footballs, a book of rules, a set of uniforms and the experience of having learned the sport invented by the English. \n\n\n Miller and other residents in São Paulo just played the first match, the employees of the Gas Company playing against employees of the São Paulo Railway. The match was played in the valley of Carmo, and the employees of the railroad company won 4-2. \n\n Now it seems the new sport is gathering quite a lot of clout, I wonder where it will take us;;;;;;;;;;;;;x
+EVTOPTA8405;Cool game, I suppose, but I this is of no much consequence to the country as a whole. Am I right?;;;;;;;;;;;;;x
 
 
 
